# mechanical_keyboard_sounds

./: Cargo.toml  README.md
src/: kb_listener.rs  main.rs  sound_container.rs  sounds.rs
src/sound/: dl.sh
